# pjecz-plataforma-web-api-oauth2

./: .gcloudignore  .gitignore  app.yaml  pyproject.toml  requirements.txt
